--- a/styles.css
+++ b/styles.css
@@ -41,12 +41,12 @@ nav{
     flex:1 0 100px;
     justify-content: flex-start;
     font-size: 32px;
+    transition: all 0.1s ease-in;
 }
 
 .name:hover{
-    animation-name:grow;
-    animation-duration: 0.25s;
-    font-size: 33px;
+    font-size: 35px;
+
 }
 
 
@@ -88,7 +88,7 @@ nav{
 /*main*/
 body{
     background-repeat: repeat-y;
-    background-image: url('./img/blob-scene-haikei.svg');
+    background-image: url('./img/blob-scene-haikei-desktop.svg');
 }
 
 .main{
@@ -146,6 +146,8 @@ body{
     margin: auto;
     flex-grow: 1;
 }
+
+
 /*skills*/
 .skills{
     margin:100px 0;
@@ -181,7 +183,13 @@ body{
     width: 175px;
     height: 50px;
     background:white;
+    transition: all 0.1s ease-in;
 }
+
+.skill:hover{
+    transform: scale(1.1);
+}
+
 .skill span{
     margin: auto;
     font-size: 20px;
@@ -196,10 +204,13 @@ body{
 .blank{
     background-color:rgba(143, 173, 191, 0.3);
 }
-/*links
+/*links*/
 .mainlink{
+    width: 70%;
     display: flex;
-    margin: 100px 0;
+    margin: auto;
+    margin-top: 100px;
+    margin-bottom: 100px;
     justify-content: center;
     flex-wrap: wrap;
 }
@@ -217,5 +228,29 @@ body{
 
 .mainlink ul li{
     flex-grow: 1;
+    display: flex;
+    align-items: center;
+    justify-items: center;
 }
-*/
+
+.mainlink img{
+    filter: invert(1);
+    height: 50px;
+    width: 50px;
+    transition: all 0.1s ease-in;
+}
+
+.mainlink img:hover{
+    transform: scale(1.2);
+}
+
+footer{
+    color: white;
+    text-align: center;
+    margin: 20px 20px;
+}
+footer a{
+    
+    text-decoration: none;
+    color: white;
+}
