--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,7 @@ nav{
 }
 .name{
     margin:auto;
-    padding:10px 20px;
+    padding:10px 40px;
     flex:1 0 100px;
     justify-content: flex-start;
     font-size: 32px;
@@ -46,8 +46,7 @@ nav{
 }
 
 .name:hover{
-    font-size: 35px;
-
+    transform: scale(1.1);
 }
 
 
@@ -117,7 +116,6 @@ body{
     border-style:solid;
     border-width: 5px;
     border-color: white;
-    flex:0 0 100px;
 }
 
 .main p{
@@ -254,4 +252,24 @@ footer a{
     
     text-decoration: none;
     color: white;
+}
+
+@media screen and (max-width:768px) {
+    .skillgrid{
+        grid-template-rows: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+    }
+    body{
+        background-repeat: repeat-y;
+        background-image: url('./img/blob-scene-haikei-mobile.svg');
+    }
+    .pfp{
+        height:100px;
+        width: 100px;
+    }
+    .name{
+        font-size: 18px;
+        padding:none;
+
+    }
 }
