--- a/styles.css
+++ b/styles.css
@@ -32,14 +32,12 @@ h1 {
 
 nav {
   position: sticky;
-
   padding-left: 10px;
   padding-right: 10px;
   width: auto;
   height: 62px;
   display: flex;
   background: #010000;
-
   color: white;
 }
 @keyframes grow {
@@ -66,6 +64,7 @@ nav {
 .links {
   width: 40%;
   display: flex;
+  gap: 4px;
   list-style-type: none;
   justify-content: space-around;
 }
@@ -128,6 +127,7 @@ body {
   margin: 25px 25px;
   height: 200px;
   width: 200px;
+  flex-grow: inherit;
   border-radius: 50%;
   border-style: solid;
   border-width: 5px;
@@ -137,7 +137,7 @@ body {
 .main p {
   margin: 20px 20px;
   white-space: pre-line;
-
+  text-align: justify;
   color: white;
   font-size: 44px;
 }
@@ -283,6 +283,12 @@ footer a {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   margin: auto auto;
+  align-items: center;
+  justify-items: center;
+  align-self: center;
+  justify-self: center;
+  margin: 0 0 0 0;
+  padding: 0 0 0 0;
 }
 
 .card {
@@ -293,7 +299,7 @@ footer a {
   padding: 10px;
   height: auto;
   width: 75%;
-  background-color: #213e53;
+  background-color: #024059;
   border-radius: 25px;
   margin: 10px;
   box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.3);
@@ -304,6 +310,15 @@ footer a {
   width: 100%;
   object-fit: cover;
   border-radius: 18px;
+}
+
+.card ul {
+  padding: 8px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  gap: 8px;
+  display: flex;
+  list-style-type: none;
 }
 
 #cardheading {
